支持点击顶栏左侧logo来切换侧栏的显示与隐藏，添加.editorconfig

--- a/packages/admin/index.html
+++ b/packages/admin/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VeryBugs-在线Bug监控和上报系统</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <!-- &#65279;是为了显示空标题，避免部分手机上在title为空时一开始会显示网址的问题 -->
+    <title>&#65279;</title>
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
